securing-kubernetes/networkpolicies.yaml
apiVersion: v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: payments-ns-with-rq
spec:
  podSelector:
    matchLabels:
      app: my-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 80
